--- a/week-2/practice/src/main/resources/application.properties
+++ b/week-2/practice/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=practice
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:file:/Users/mohammedshahid/Developer/code/Live-Specializations/SpringBoot-Specs/week-2/db
+spring.datasource.url=jdbc:h2:mem:test_db;
+spring.datasource.username=shahid
+spring.datasource.password=Shahid123
+spring.jpa.hibernate.ddl-auto=create
