--- a/week-2/practice/src/main/resources/application.properties
+++ b/week-2/practice/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test_db;
 spring.datasource.username=shahid
 spring.datasource.password=Shahid123
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
