Module 2 with tasks

--- a/week-2/practice/src/main/resources/application.properties
+++ b/week-2/practice/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:h2:mem:test_db;
 spring.datasource.username=shahid
 spring.datasource.password=Shahid123
 spring.jpa.hibernate.ddl-auto=update
+spring.debug=true
